Flatpak, new browser.js, fix one pixel white gap on flatpak

--- a/src/changed/browser/themes/linux/browser.css
+++ b/src/changed/browser/themes/linux/browser.css
@@ -42,6 +42,7 @@
    appearance: none;
    background-color: transparent;
    border-top: none;
+   border-bottom: 0px !important;
  }
  
  .browser-toolbar {
